# kinfu_ros

./: CMakeLists.txt  README.md  package.xml
include/kinfu_ros/io/: capture.hpp
include/kinfu_ros/kfusion/: exports.hpp  kinfu.hpp  types.hpp
include/kinfu_ros/kfusion/cuda/: device_array.hpp  device_memory.hpp  imgproc.hpp  kernel_containers.hpp  projective_icp.hpp  tsdf_volume.hpp
include/kinfu_ros/ros/: kinfu_server.h  ros_rgbd_camera.hpp
launch/: launch_default.launch.xml  launch_default.launch.xml~
src/: core.cpp  device_memory.cpp  imgproc.cpp  internal.hpp  kinfu.cpp  kinfu_node.cpp  precomp.cpp  precomp.cpp~  precomp.hpp  projective_icp.cpp  safe_call.hpp  tsdf_volume.cpp
src/cuda/: device.hpp  imgproc.cu  proj_icp.cu  temp_utils.hpp  texture_binder.hpp  tsdf_volume.cu
src/ros/: kinfu_server.cpp  ros_rgbd_camera.cpp
